--- a/public/display.html
+++ b/public/display.html
@@ -1,38 +1,67 @@
+
 <!DOCTYPE html>
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Display</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Laserpointer Display</title>
   <style>
-    html, body {
+    body {
       margin: 0;
-      overflow: hidden;
       background: black;
     }
     canvas {
       display: block;
+      margin: auto;
       background: black;
     }
   </style>
 </head>
 <body>
   <canvas id="canvas" width="1024" height="1024"></canvas>
+
   <script src="/socket.io/socket.io.js"></script>
   <script>
+    const socket = io();
     const canvas = document.getElementById("canvas");
     const ctx = canvas.getContext("2d");
-    const socket = io();
+    let points = [];
 
-    socket.on("draw", data => {
-      ctx.fillStyle = data.color;
-      ctx.beginPath();
-      ctx.arc(data.x, data.y, 5, 0, Math.PI * 2);
-      ctx.fill();
+    ctx.lineCap = "round";
+    ctx.lineJoin = "round";
+
+    socket.on("draw", ({ x, y, color }) => {
+      points.push({ x, y });
+
+      if (points.length > 2) {
+        drawBezier(points[points.length - 3], points[points.length - 2], points[points.length - 1], color);
+      } else if (points.length === 2) {
+        drawLine(points[0], points[1], color);
+      }
     });
 
     socket.on("clear", () => {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
+      points = [];
     });
+
+    function drawLine(p1, p2, color) {
+      ctx.strokeStyle = color;
+      ctx.lineWidth = 6;
+      ctx.beginPath();
+      ctx.moveTo(p1.x, p1.y);
+      ctx.lineTo(p2.x, p2.y);
+      ctx.stroke();
+    }
+
+    function drawBezier(p0, p1, p2, color) {
+      ctx.strokeStyle = color;
+      ctx.lineWidth = 6;
+      ctx.beginPath();
+      ctx.moveTo(p0.x, p0.y);
+      ctx.quadraticCurveTo(p1.x, p1.y, p2.x, p2.y);
+      ctx.stroke();
+    }
   </script>
 </body>
 </html>
