--- a/public/display.html
+++ b/public/display.html
@@ -1,88 +1,83 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Display v1.3</title>
+  <title>Laserpointer Display v1.4</title>
   <style>
-    body { margin: 0; background: black; overflow: hidden; }
-    canvas { display: block; margin: auto; background: black; }
+    body {
+      margin: 0;
+      background: black;
+      overflow: hidden;
+    }
+    canvas {
+      display: block;
+      margin: 0 auto;
+      background: black;
+    }
     #version {
-      position: fixed;
-      top: 5px;
-      left: 5px;
+      position: absolute;
+      top: 10px;
+      left: 10px;
       color: white;
       font-family: sans-serif;
-      font-size: 14px;
+      font-size: 12px;
     }
   </style>
 </head>
 <body>
-<div id="version">v1.3</div>
-<canvas id="canvas" width="1024" height="1024"></canvas>
-<script src="/socket.io/socket.io.js"></script>
-<script>
-const socket = io();
-const canvas = document.getElementById("canvas");
-const ctx = canvas.getContext("2d");
-ctx.lineWidth = 3;
-ctx.lineCap = "round";
+  <div id="version">v1.4</div>
+  <canvas id="canvas" width="1024" height="1024"></canvas>
 
-let drawing = false;
-let color = "red";
-let paths = []; // Stores separate drawing paths
-let currentPath = [];
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    const canvas = document.getElementById("canvas");
+    const ctx = canvas.getContext("2d");
+    const socket = io();
 
-socket.on("draw", ({ x, y, color: c, isDrawing }) => {
-  if (!isDrawing) {
-    if (currentPath.length > 1) {
-      paths.push({ points: currentPath, color });
+    ctx.lineWidth = 4;
+    ctx.lineCap = "round";
+    ctx.strokeStyle = "red";
+
+    let isDrawing = false;
+    let lastPoint = null;
+    let pathPoints = [];
+
+    // Zeichne den Pfad mit Bezier-Kurven
+    function drawPath(points) {
+      if (points.length < 2) return;
+
+      ctx.beginPath();
+      ctx.moveTo(points[0].x, points[0].y);
+
+      for (let i = 1; i < points.length - 1; i++) {
+        const midX = (points[i].x + points[i + 1].x) / 2;
+        const midY = (points[i].y + points[i + 1].y) / 2;
+        ctx.quadraticCurveTo(points[i].x, points[i].y, midX, midY);
+      }
+
+      ctx.stroke();
     }
-    currentPath = [];
-    return;
-  }
 
-  currentPath.push({ x, y });
-  drawCanvas(); // Redraw everything
-});
+    // Eingehende Zeichenpunkte
+    socket.on("draw", ({ x, y, drawing }) => {
+      if (drawing) {
+        pathPoints.push({ x, y });
+        if (pathPoints.length > 2) {
+          ctx.clearRect(0, 0, canvas.width, canvas.height);
+          drawPath(pathPoints);
+        }
+      } else {
+        // neuer Pfad
+        pathPoints = [];
+      }
+    });
 
-socket.on("clear", () => {
-  paths = [];
-  currentPath = [];
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-});
-
-function drawCanvas() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-  // Draw all stored paths
-  for (const path of paths) {
-    drawBezierPath(path.points, path.color);
-  }
-
-  // Draw current path
-  if (currentPath.length > 1) {
-    drawBezierPath(currentPath, color);
-  }
-}
-
-function drawBezierPath(points, strokeColor) {
-  ctx.strokeStyle = strokeColor;
-  ctx.beginPath();
-  ctx.moveTo(points[0].x, points[0].y);
-
-  for (let i = 1; i < points.length - 2; i++) {
-    const xc = (points[i].x + points[i + 1].x) / 2;
-    const yc = (points[i].y + points[i + 1].y) / 2;
-    ctx.quadraticCurveTo(points[i].x, points[i].y, xc, yc);
-  }
-
-  // Last segment
-  const last = points.length - 1;
-  ctx.lineTo(points[last].x, points[last].y);
-  ctx.stroke();
-}
-</script>
+    // Zeichenfläche löschen
+    socket.on("clear", () => {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      pathPoints = [];
+    });
+  </script>
 </body>
 </html>
