--- a/public/display.html
+++ b/public/display.html
@@ -1,16 +1,18 @@
+
 <!DOCTYPE html>
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Laserpointer Display v1.4</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Laser Display 1.2</title>
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
       background: black;
       overflow: hidden;
     }
-    canvas {
+    #canvas {
       display: block;
       margin: 0 auto;
       background: black;
@@ -18,65 +20,56 @@
     #version {
       position: absolute;
       top: 10px;
-      left: 10px;
+      right: 10px;
       color: white;
       font-family: sans-serif;
-      font-size: 12px;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
-  <div id="version">v1.4</div>
+  <div id="version">v1.2</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
+    const socket = io();
     const canvas = document.getElementById("canvas");
     const ctx = canvas.getContext("2d");
-    const socket = io();
 
-    ctx.lineWidth = 4;
-    ctx.lineCap = "round";
-    ctx.strokeStyle = "red";
-
-    let isDrawing = false;
     let lastPoint = null;
-    let pathPoints = [];
+    let isDrawing = false;
 
-    // Zeichne den Pfad mit Bezier-Kurven
-    function drawPath(points) {
-      if (points.length < 2) return;
+    socket.on("draw", (data) => {
+      const { x, y, color, start } = data;
+      ctx.fillStyle = color;
+
+      if (start || !lastPoint) {
+        // Neue Linie beginnen oder keine vorherigen Punkte
+        lastPoint = { x, y };
+        ctx.beginPath();
+        ctx.arc(x, y, 5, 0, Math.PI * 2);
+        ctx.fill();
+        return;
+      }
+
+      // Quadratische Bezier-Kurve von lastPoint zu neuem Punkt
+      const midX = (lastPoint.x + x) / 2;
+      const midY = (lastPoint.y + y) / 2;
 
       ctx.beginPath();
-      ctx.moveTo(points[0].x, points[0].y);
-
-      for (let i = 1; i < points.length - 1; i++) {
-        const midX = (points[i].x + points[i + 1].x) / 2;
-        const midY = (points[i].y + points[i + 1].y) / 2;
-        ctx.quadraticCurveTo(points[i].x, points[i].y, midX, midY);
-      }
-
+      ctx.moveTo(lastPoint.x, lastPoint.y);
+      ctx.quadraticCurveTo(lastPoint.x, lastPoint.y, midX, midY);
+      ctx.strokeStyle = color;
+      ctx.lineWidth = 5;
       ctx.stroke();
-    }
 
-    // Eingehende Zeichenpunkte
-    socket.on("draw", ({ x, y, drawing }) => {
-      if (drawing) {
-        pathPoints.push({ x, y });
-        if (pathPoints.length > 2) {
-          ctx.clearRect(0, 0, canvas.width, canvas.height);
-          drawPath(pathPoints);
-        }
-      } else {
-        // neuer Pfad
-        pathPoints = [];
-      }
+      lastPoint = { x, y };
     });
 
-    // Zeichenfläche löschen
     socket.on("clear", () => {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
-      pathPoints = [];
+      lastPoint = null;
     });
   </script>
 </body>
