--- a/public/control.html
+++ b/public/control.html
@@ -2,100 +2,115 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-  <title>Control v1.6</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Laserpointer Control v1.2</title>
   <style>
     body {
       margin: 0;
-      background: #111;
+      background: black;
       color: white;
       font-family: sans-serif;
       overflow: hidden;
     }
-    #ui {
-      position: fixed;
-      top: 10px;
-      left: 10px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 6px;
-      z-index: 10;
-    }
-    .color-btn {
-      width: 30px;
-      height: 30px;
-      border: none;
-      border-radius: 50%;
-      cursor: pointer;
-    }
-    #laser {
-      position: fixed;
-      bottom: 40%;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 80px;
-      height: 80px;
-      background: #555;
-      border-radius: 50%;
-      border: 3px solid white;
-      z-index: 10;
-      touch-action: none;
-    }
+
     #version {
-      position: fixed;
+      position: absolute;
       top: 10px;
       right: 10px;
       font-size: 12px;
-      color: #aaa;
+      color: white;
+    }
+
+    #colors {
+      position: absolute;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 8px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .color-btn {
+      width: 28px;
+      height: 28px;
+      border-radius: 50%;
+      border: none;
+    }
+
+    #laser {
+      position: absolute;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 90px;
+      height: 90px;
+      border-radius: 50%;
+      background: white;
+      opacity: 0.6;
+      border: none;
+    }
+
+    #laser:active {
+      opacity: 1;
     }
   </style>
 </head>
 <body>
-  <div id="ui"></div>
-  <div id="laser"></div>
-  <div id="version">v1.6</div>
+  <div id="version">v1.2</div>
+  <div id="colors"></div>
+  <button id="laser"></button>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    let maxAlpha = 20;
-    let maxBeta = 20;
-    let calibrated = false;
-    let baseAlpha = 0;
-    let baseBeta = 0;
+    const laser = document.getElementById("laser");
+    const colors = document.getElementById("colors");
+
     let drawing = false;
-    let color = "#ff0000";
+    let currentColor = "red";
+    let centerAlpha = null;
+    let centerBeta = null;
+    let maxAngle = 30;
 
-    socket.on("admin-settings", data => {
-      if (typeof data.maxAlpha === "number") maxAlpha = data.maxAlpha;
-      if (typeof data.maxBeta === "number") maxBeta = data.maxBeta;
-    });
-
-    const ui = document.getElementById("ui");
-    const colors = ["#ff0000", "#ff8000", "#ffff00", "#80ff00", "#00ff00", "#00ffff", "#0080ff", "#0000ff", "#8000ff", "#ff00ff"];
-    colors.forEach(c => {
+    // Farbauswahl erzeugen
+    const colorList = ["red", "orange", "yellow", "green", "cyan", "blue", "purple", "magenta", "white", "gray"];
+    colorList.forEach(c => {
       const btn = document.createElement("button");
       btn.className = "color-btn";
       btn.style.background = c;
-      btn.addEventListener("click", () => color = c);
-      ui.appendChild(btn);
+      btn.onclick = () => currentColor = c;
+      colors.appendChild(btn);
     });
 
-    const laser = document.getElementById("laser");
+    // Laser-Button gedrückt
     laser.addEventListener("touchstart", e => {
       e.preventDefault();
-      if (!calibrated) calibrated = true;
-      drawing = true;
+      if (!drawing) {
+        drawing = true;
+        if (centerAlpha === null || centerBeta === null) {
+          centerAlpha = lastAlpha;
+          centerBeta = lastBeta;
+        }
+      }
     });
+
+    // Laser-Button losgelassen
     laser.addEventListener("touchend", e => {
       e.preventDefault();
       drawing = false;
+      socket.emit("drawEnd");
     });
 
-    if (typeof DeviceOrientationEvent !== "undefined" &&
-        typeof DeviceOrientationEvent.requestPermission === "function") {
+    let lastAlpha = 0;
+    let lastBeta = 0;
+
+    // iOS-Gyro-Zugriff
+    if (typeof DeviceOrientationEvent !== 'undefined' &&
+        typeof DeviceOrientationEvent.requestPermission === 'function') {
       DeviceOrientationEvent.requestPermission().then(response => {
-        if (response === "granted") {
+        if (response === 'granted') {
           window.addEventListener("deviceorientation", handleOrientation);
         }
       }).catch(console.error);
@@ -103,30 +118,33 @@
       window.addEventListener("deviceorientation", handleOrientation);
     }
 
-    
-    function getDeltaAngle(current, base) {
-      let delta = current - base;
-      if (delta > 180) delta -= 360;
-      if (delta < -180) delta += 360;
-      return delta;
+    function handleOrientation(event) {
+      lastAlpha = event.alpha;
+      lastBeta = event.beta;
+
+      if (drawing && centerAlpha !== null && centerBeta !== null) {
+        const dx = normalizeAngle(event.alpha - centerAlpha);
+        const dy = event.beta - centerBeta;
+
+        const x = 512 + (dx / maxAngle) * 512;
+        const y = 512 + (dy / maxAngle) * 512;
+
+        socket.emit("draw", {
+          x: clamp(x, 0, 1023),
+          y: clamp(y, 0, 1023),
+          color: currentColor
+        });
+      }
     }
 
-    function handleOrientation(event) {
-      if (!calibrated) {
-        baseAlpha = event.alpha || 0;
-        baseBeta = event.beta || 0;
-        return;
-      }
+    function normalizeAngle(angle) {
+      if (angle > 180) return angle - 360;
+      if (angle < -180) return angle + 360;
+      return angle;
+    }
 
-      const dx = getDeltaAngle((event.alpha || 0), baseAlpha);
-      const dy = (event.beta || 0) - baseBeta;
-
-      const x = Math.max(0, Math.min(1024, 512 - (dx / maxAlpha) * 512));
-      const y = Math.max(0, Math.min(1024, 512 - (dy / maxBeta) * 512));
-
-      if (drawing) {
-        socket.emit("draw", { x, y, color });
-      }
+    function clamp(v, min, max) {
+      return Math.max(min, Math.min(max, v));
     }
   </script>
 </body>
