--- a/public/display.html
+++ b/public/display.html
@@ -1,12 +1,14 @@
+
 <!DOCTYPE html>
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Laserpointer Display</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Laser Display v1.3</title>
   <style>
-    body {
+    html, body {
       margin: 0;
+      overflow: hidden;
       background: black;
     }
     canvas {
@@ -14,57 +16,109 @@
       margin: auto;
       background: black;
     }
+    .version {
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      color: white;
+      font-family: sans-serif;
+      font-size: 14px;
+    }
+    .pointer {
+      position: absolute;
+      width: 12px;
+      height: 12px;
+      margin: -6px 0 0 -6px;
+      background-color: lime;
+      border-radius: 50%;
+      pointer-events: none;
+      animation: pulse 1.2s infinite ease-in-out;
+    }
+
+    @keyframes pulse {
+      0%, 100% {
+        transform: scale(1);
+        opacity: 0.7;
+      }
+      50% {
+        transform: scale(1.5);
+        opacity: 1;
+      }
+    }
   </style>
 </head>
 <body>
   <canvas id="canvas" width="1024" height="1024"></canvas>
+  <div class="version">v1.3</div>
+  <div id="pointers"></div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
     const canvas = document.getElementById("canvas");
     const ctx = canvas.getContext("2d");
-    let points = [];
+    const pointers = document.getElementById("pointers");
 
-    ctx.lineCap = "round";
-    ctx.lineJoin = "round";
+    let clients = {};
 
-    socket.on("draw", ({ x, y, color, isStart }) => {
+    function updatePointer(id, x, y) {
+      let pointer = document.getElementById("ptr_" + id);
+      if (!pointer) {
+        pointer = document.createElement("div");
+        pointer.className = "pointer";
+        pointer.id = "ptr_" + id;
+        pointers.appendChild(pointer);
+      }
+      pointer.style.left = (canvas.offsetLeft + x) + "px";
+      pointer.style.top = (canvas.offsetTop + y) + "px";
+    }
+
+    function removePointer(id) {
+      const el = document.getElementById("ptr_" + id);
+      if (el) el.remove();
+    }
+
+    socket.on("draw", data => {
+      const { id, x, y, color, isStart } = data;
+
+      // Update position of pointer for user
+      updatePointer(id, x, y);
+
+      // Drawing
+      ctx.fillStyle = color || "red";
+      ctx.strokeStyle = color || "red";
+      ctx.lineWidth = 4;
+      ctx.lineCap = "round";
+
+      if (!clients[id]) {
+        clients[id] = { lastX: x, lastY: y };
+        return;
+      }
+
       if (isStart) {
-        points = [];
+        clients[id].lastX = x;
+        clients[id].lastY = y;
+        return;
       }
 
-      points.push({ x, y });
-
-      if (points.length > 2) {
-        drawBezier(points[points.length - 3], points[points.length - 2], points[points.length - 1], color);
-      } else if (points.length === 2) {
-        drawLine(points[0], points[1], color);
-      }
+      ctx.beginPath();
+      ctx.moveTo(clients[id].lastX, clients[id].lastY);
+      ctx.lineTo(x, y);
+      ctx.stroke();
+      clients[id].lastX = x;
+      clients[id].lastY = y;
     });
 
     socket.on("clear", () => {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
-      points = [];
+      pointers.innerHTML = "";
+      clients = {};
     });
 
-    function drawLine(p1, p2, color) {
-      ctx.strokeStyle = color;
-      ctx.lineWidth = 6;
-      ctx.beginPath();
-      ctx.moveTo(p1.x, p1.y);
-      ctx.lineTo(p2.x, p2.y);
-      ctx.stroke();
-    }
-
-    function drawBezier(p0, p1, p2, color) {
-      ctx.strokeStyle = color;
-      ctx.lineWidth = 6;
-      ctx.beginPath();
-      ctx.moveTo(p0.x, p0.y);
-      ctx.quadraticCurveTo(p1.x, p1.y, p2.x, p2.y);
-      ctx.stroke();
-    }
+    socket.on("disconnectClient", id => {
+      delete clients[id];
+      removePointer(id);
+    });
   </script>
 </body>
 </html>
