--- a/public/control.html
+++ b/public/control.html
@@ -2,147 +2,131 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Control v3.5</title>
+  <meta charset="UTF-8">
+  <title>Control v3.6</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <style>
-    html, body {
+    body {
       margin: 0;
-      background: black;
-      color: white;
-      font-family: sans-serif;
       overflow: hidden;
+      background: black;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    #colorButtons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-top: 20px;
+    }
+    .color {
+      width: 30px;
+      height: 30px;
+      margin: 5px;
+      border-radius: 50%;
+      border: 2px solid white;
+    }
+    #laser {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      background: white;
+      margin-top: 50px;
+      touch-action: none;
     }
     .version {
       position: absolute;
       top: 10px;
       right: 20px;
+      color: white;
+      font-family: sans-serif;
       font-size: 14px;
-    }
-    .colors {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      display: flex;
-      flex-wrap: wrap;
-      width: 180px;
-      gap: 5px;
-    }
-    .color {
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      border: 2px solid white;
-    }
-    .color.selected {
-      box-shadow: 0 0 5px 2px white;
-    }
-    .laser-btn {
-      position: absolute;
-      bottom: 50%;
-      left: 50%;
-      width: 80px;
-      height: 80px;
-      margin-left: -40px;
-      margin-bottom: -40px;
-      background: #fff;
-      border-radius: 50%;
-      opacity: 0.4;
-      touch-action: none;
     }
   </style>
 </head>
 <body>
-  <div class="version">v3.5</div>
-  <div class="colors" id="colorPalette"></div>
-  <div class="laser-btn" id="laserButton"></div>
+  <div class="version">v3.6</div>
+  <div id="colorButtons"></div>
+  <div id="laser"></div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
+    const colors = ["red", "orange", "yellow", "green", "blue", "cyan", "magenta", "white", "gray", "lime"];
+    let currentColor = colors[0];
+    let isDrawing = false;
+    let calibrated = false;
+    let midAlpha = 0;
+    let midBeta = 0;
+
+    const canvasSize = 1024;
     const maxAngle = 20;
-    let drawing = false;
-    let color = "#00FF00";
-    let isFirst = true;
 
-    const colorList = ["#FF0000", "#00FF00", "#0000FF", "#FFFF00", "#FF00FF", "#00FFFF", "#FFFFFF", "#FFA500", "#00AA00", "#9900CC"];
-    const palette = document.getElementById("colorPalette");
-    colorList.forEach(c => {
-      const el = document.createElement("div");
-      el.className = "color";
-      el.style.backgroundColor = c;
-      if (c === color) el.classList.add("selected");
-      el.onclick = () => {
-        color = c;
-        document.querySelectorAll(".color").forEach(e => e.classList.remove("selected"));
-        el.classList.add("selected");
-      };
-      palette.appendChild(el);
+    const colorButtons = document.getElementById("colorButtons");
+    colors.forEach(color => {
+      const btn = document.createElement("div");
+      btn.className = "color";
+      btn.style.backgroundColor = color;
+      btn.addEventListener("click", () => currentColor = color);
+      colorButtons.appendChild(btn);
     });
 
-    const btn = document.getElementById("laserButton");
-
-    let lastX = 0;
-    let lastY = 0;
-
-    btn.addEventListener("touchstart", e => {
-      drawing = true;
-      isFirst = true;
-      e.preventDefault();
-    });
-    btn.addEventListener("touchend", e => {
-      drawing = false;
-      e.preventDefault();
-    });
-
-    function handleOrientation(e) {
-      if (e.alpha === null) return;
-
-      let x = (e.alpha > 180 ? e.alpha - 360 : e.alpha);
-      let y = e.beta;
-
-      // Umkehren für korrekte Richtung
-      x = -x;
-      y = -y;
-
-      x = Math.max(-maxAngle, Math.min(maxAngle, x));
-      y = Math.max(-maxAngle, Math.min(maxAngle, y));
-
-      const canvasX = ((x + maxAngle) / (2 * maxAngle)) * 1024;
-      const canvasY = ((y + maxAngle) / (2 * maxAngle)) * 1024;
-
-      lastX = canvasX;
-      lastY = canvasY;
-
-      socket.emit("draw", {
-        id: socket.id,
-        x: canvasX,
-        y: canvasY,
-        color: color,
-        isStart: isFirst && drawing
-      });
-
-      if (isFirst && drawing) isFirst = false;
-    }
+    const laser = document.getElementById("laser");
 
     function requestPermissionIfNeeded() {
-      if (
-        typeof DeviceOrientationEvent !== "undefined" &&
-        typeof DeviceOrientationEvent.requestPermission === "function"
-      ) {
-        DeviceOrientationEvent.requestPermission()
-          .then(permissionState => {
-            if (permissionState === "granted") {
-              window.addEventListener("deviceorientation", handleOrientation);
-            }
-          })
-          .catch(console.error);
+      if (typeof DeviceOrientationEvent !== "undefined" && typeof DeviceOrientationEvent.requestPermission === "function") {
+        DeviceOrientationEvent.requestPermission().then(response => {
+          if (response === "granted") {
+            window.addEventListener("deviceorientation", handleOrientation);
+          }
+        }).catch(console.error);
       } else {
         window.addEventListener("deviceorientation", handleOrientation);
       }
     }
 
-    window.addEventListener("load", requestPermissionIfNeeded);
+    function handleOrientation(event) {
+      if (!event.alpha || !event.beta) return;
+      const alpha = event.alpha;
+      const beta = event.beta;
+
+      if (!calibrated) return;
+
+      let dx = alpha - midAlpha;
+      let dy = beta - midBeta;
+
+      if (dx > 180) dx -= 360;
+      if (dx < -180) dx += 360;
+
+      const x = Math.max(0, Math.min(canvasSize, canvasSize / 2 + (dx / maxAngle) * (canvasSize / 2)));
+      const y = Math.max(0, Math.min(canvasSize, canvasSize / 2 + (dy / maxAngle) * (canvasSize / 2)));
+
+      socket.emit("draw", {
+        x, y,
+        color: currentColor,
+        id: socket.id,
+        isStart: isDrawing
+      });
+    }
+
+    laser.addEventListener("touchstart", e => {
+      e.preventDefault();
+      if (!calibrated) {
+        calibrated = true;
+        return;
+      }
+      isDrawing = true;
+    });
+
+    laser.addEventListener("touchend", e => {
+      e.preventDefault();
+      isDrawing = false;
+      socket.emit("drawend", socket.id);
+    });
+
+    requestPermissionIfNeeded();
   </script>
 </body>
 </html>
